--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@
 .modalcontent0{
 	position: fixed;
 	left: 0px;
-	top: 65px;
-	position: relative;
-	background: #088088;
+	bottom: 70px;
+	background: linear-gradient(20deg, #0f0, #111, #000);;
+	/*background: #77bb33;*/
 	padding: 10px;
 	color: white;
 } 
@@ -107,66 +107,23 @@
 			0 0 0 3px #333, 
 			/*-0px 0 13px 13px lime,
 			*/0 0 0 4px #777;
+	animation: luz 1s ease-in-out infinite;
+}
+@keyframes luz{
+0%{
+border: lime;
+}
+50%{
+border: yellow;
+}
+100%{
+border: lime;
+}
 }
 .cElect:active{
 	transform: scale(0.50);
 }
 
-
-.cElect .sl0{
-	z-index: 1;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	bottom: 0px;
-	right: 0px;
-	background: inherit;
-	border-radius: inherit;
-	opacity: .3;
-	border-radius: 50%;
-	animation: pulAn 4s ease-out infinite;
-}
-.cElect .sl1{
-	z-index: 1;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	bottom: 0px;
-	right: 0px;
-	background: inherit;
-	border-radius: inherit;
-	opacity: .6;
-	border-radius: 50%;
-	animation: plAn 4s ease-out infinite;
-}
-.cElect .sl2{
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background: inherit;
-	border-radius: inherit;
-	opacity: .3;
-	border-radius: 50%;
-	animation: pulAAn 4s ease-out infinite;
-}
-@keyframes pulAn{
-100%{
-	opacity: 0;
-	transform: scale(2);
-}
-}
-@keyframes plAn{
-50%{
-	opacity: 0;
-	transform: scale(2);
-}
-}
-@keyframes pulAAn{
-100%{
-	opacity: 0;
-	transform: scale(2);
-}
-}
 
 @media only screen and (max-width: 800px){
 .modalcontent1{
@@ -186,10 +143,13 @@
 }
 .cElect{
 	bottom: 40px;
-	right: 30px;
+	right: 5px;
 	 padding: 6px 10px 9px;
 	 font-size: 16px;
 	 background: olive;
 	 animation: box 4s all infinite;
+}
+.modalcontent0{
+	background: #aaaf99;
 }
 }
