--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .modal1{
 	overflow: auto; height: 100vh; position: fixed; top: 0px; bottom: 0; right: 0; left: 0;
 	display: flex; align-items: center; justify-content: center; background: rgba(8,0,9,0.9);
@@ -144,11 +143,11 @@ border: lime;
 .cElect{
 	bottom: 40px;
 	right: 5px;
-	 padding: 6px 10px 9px;
-	 font-size: 16px;
+	 padding: 7px 11px 10px;
+	 font-size: 18px;
 	 background: olive;
 }
-.modalcontent0{
+/*.modalcontent0{
 	background: #aaaf99;
-}
+}*/
 }
